# linode_stack

./: .ansible-lint  .gitattributes  .gitignore  .yamllint  CHANGELOG.md  PREREQUISITES.md  README.md  ansible.cfg  get_cred_test_playbook.yml  inventory.yml  linode.md  mysql.sh  playbook.yml  pyproject.toml  requirements-dev.txt  requirements.txt  requirements.yml
.github/files/: package-lock.json  release.config.cjs
.github/workflows/: ansible-lint.yml  bandit.yml  black.yml  gitleaks.yml  isort.yml  mypy.yml  pylint.yml  release.yml  scans.yml  yamllint.yml
blr/: playbook.yml  requirements-dev.txt  requirements.yml
codifiedvault/kv2/: managed-secrets.tf
codifiedvault/policy/: minio-kes.tf
files/jellyfin/: branding.xml  xbmcmetadata.xml
files/nc/: create_dump.sh  nextcloud-cron.timer  nextcloud-data-dump.timer  nextcloud-scanfiles.timer
files/onlyoffice/: docker_ep.sh  entrypoint-update-ca-certificates.sh  entrypoint.sh  pg_cert_updater.py
git/: .Dockerignore  Dockerfile  README.md  entrypoint.sh  install.sh  sshd_config
group_vars/: all.yml  elasticsearch.yml  jellyfin.yml  mini0_kes.yml  mini0_mini0.yml  minio_kes.yml  minio_minio.yml  minio_s3.yml  nextcloud.yml  nginx_proxy_manager.yml  onlyoffice.yml  postgres.yml  redis.yml
group_vars/all/: all.yml  collabora.yml  database.yml  kes.yml  linode-minio.yml  minio.yml  mysql.yml  nextcloud.yml  nfs-server.yml  onlyoffice.yml  secrets.yml  vault.yml  vaultops.yml
group_vars/nextcloud/: all.yml  cache.yml  fts_elasticsearch.yml  fulltextsearch.yml  imaginary.yml
host_vars/: localhost.yml  nextcloud-server.yml  rb4-m1.yml  rb4-m2.yml  rb4-m3.yml
host_vars/nextcloud-aio/: all.yml  nextcloud-aio.yml
host_vars/rb4-m1/: all.yml  database.yml  mini0.yml  mini0_kes.yml  mini0_mini0.yml  minio.yml  postgres.yml
host_vars/rb4-m2/: all.yml  mini0_kes.yml  mini0_mini0.yml  minio.yml  minio_kes.yml  minio_minio.yml  minio_s3.yml  nextcloud.yml  samba.yml
host_vars/rb4-m3/: jellyfin.yml
host_vars/s1-home/: all.yml  jellyfin.yml  nextcloud.yml  samba.yml
minio/: README.md  minio-install.sh
plugins/filter/: get_pub.py  home_lab_filters.py
plugins/inventory/: blr_home_lab_inv.py  vault_inventory_builder.py
plugins/lookup/: get_homelab_creds.py  home_lab_secrets.py  lab_secrets.py  secret_squirrel.py  secrets.py  vaultops_secrets.py
plugins/modules/: github_action_secret.py  home_lab_secrets.py  secrets_action.py
pylib/github_bot/: __init__.py  github.py  github_bot.py
pylib/home_lab_secrets/: __init__.py
pylib/vaultops/: __init__.py  __main__.py
tasks/: acme.yml  add_inv.yml  collabora.yml  create_linode.yml  disk.yml  elasticsearch.yml  jellyfin.yml  kes.yml  linode_manage.yml  load-secrets.yml  main.yml  mini0-kes.yml  mini0.yml  minio-kes.yml  minio.yml  minio_kes.yml  minio_minio.yml  minio_s3.yml  nextcloud.yml  nfs-client.yml  nfs-server.yml  onlyoffice.yml  patch.yml  patch_system.yml  postgres.yml  redis.yml  samba.yml  secrets.yml
tasks/common/: crypt_mount.yml
tasks/database/: elasticsearch.yml  mysql.yml  postgres.yml  redis.yml
tasks/jellyfin/: config.yml  container.yml  main.yml  package.yml
tasks/mini0/: disk.yml  kes.yml  main.yml  mini0.yml
tasks/minio/: add_inv.yml  create_linode.yml  disk.yml  kes.yml  linode.yml  main.yml  minio.yml  patch.yml  server.yml
tasks/nextcloud/: 00000-prepare.yml  00100-db.yml  00200-install.yml  00300-admin.yml  00400-cache.yml  00500-imaginary.yml  99999-post-install.yml  (+18 more)
templates/: apache-nc-conf.j2  jail2ban.conf.j2
(+86 files in other folders)
