[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.pylint."FORMAT"]
max-line-length = 120
indent-string = "    "

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

[tool.poetry]
name = "home-lab"
version = "1.3.1"
description = ""
authors = ["arpan <arpan.rec@gmail.com>"]
readme = "README.md"
package-mode = false
# packages = [{ include = "homelab", from = "pylib" }]

[tool.poetry.dependencies]
python = "^3.11"
ansible = "11.0.0"
bcrypt = "4.2.1"
jmespath = "1.0.1"
cachier = "3.1.2"

[tool.poetry.group.dev.dependencies]
black = "24.10.0"
pylint = "3.3.1"
mypy = "1.13.0"
ansible-lint = { version = "24.10.0", markers = "platform_system != 'Windows'" }
poetry-plugin-export = "1.8.0"
pyright = "1.1.389"
types-requests = "2.32.0.20241016"
types-pyyaml = "6.0.12.20240917"
isort = "5.13.2"
bandit = "1.7.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
