[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.pylint."FORMAT"]
max-line-length = 120
indent-string = "    "

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

[tool.poetry]
name = "home-lab"
version = "1.14.3"
description = ""
authors = ["arpan <arpan.rec@gmail.com>"]
readme = "README.md"
package-mode = true
packages = [
    { include = "vaultops", from = "pylib" },
    { include = "github_bot", from = "pylib" },
]
scripts = { "vaultops" = "vaultops.__main__:main" }

[tool.poetry.dependencies]
python = "^3.11"
ansible = "11.1.0"
bcrypt = "4.2.1"
hvac = "2.3.0"
passlib = "1.7.4"
jmespath = "1.0.1"
pydantic = "2.10.3"
pydantic-settings = "2.6.1"
prettytable = "3.12.0"
python-terraform = "0.10.1"
pygithub = "2.5.0"
python-gnupg = "0.5.3"
boto3 = "1.35.76"
boto3-stubs = { extras = ["s3"], version = "1.35.76" } # extras = ["all"]
cachier = "3.1.2"

[tool.poetry.group.dev.dependencies]
black = "24.10.0"
pylint = "3.3.2"
mypy = "1.13.0"
ansible-lint = { version = "24.10.0", markers = "platform_system != 'Windows'" }
poetry-plugin-export = "1.8.0"
pyright = "1.1.390"
types-requests = "2.32.0.20241016"
types-pyyaml = "6.0.12.20240917"
isort = "5.13.2"
bandit = "1.8.0"
types-jmespath = "1.0.2.20240106"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
