[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.pylint."FORMAT"]
max-line-length = 120
indent-string = "    "

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

[tool.poetry]
name = "home-lab"
version = "3.1.0"
description = ""
authors = ["arpan <arpan.rec@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
ansible = "11.1.0"
jmespath = "1.0.1"

[tool.poetry.group.dev.dependencies]
black = "24.10.0"
pylint = "3.3.3"
mypy = "1.14.1"
ansible-lint = { version = "24.12.2", markers = "platform_system != 'Windows'" }
poetry-plugin-export = "1.8.0"
pyright = "1.1.391"
isort = "5.13.2"
bandit = "1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
